--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="weather-container">
             <img class="weather-icon" src="./assets/css/images/weather_icon.svg">
             <span class="weather-banner">
-                <!-- place for dynamically created <p class="banner-text"> -->
+
             </span>
         </div>
         <h1 class="title">Airport Network</h1>
@@ -26,20 +26,29 @@
 
     <div class="content-container">
         <div class="list-container">
-            <h2>Filterable List</h2>
-            <p>Type something in the input field to search the list for specific items:</p>  
+            <h2>Airport List</h2>
+            <p>Search for an airport by name or identifier:</p>  
             <input class="form-control" id="myInput" type="text" placeholder="Search..">
             <br>
             <ul class="list-group" id="airport-list">
-                <!-- <li class="list-group-item">First item</li> -->
+
             </ul>
         </div>
 
         <div class="airport-data">
-            <h3 class="intro-text">Welcome to the International Airport Portal.</h3>
-            <h4 class="intro-text">Please click on one of the airports for more details.</h4>
+            <div class="intro-text-div">
+                <h3 class="intro-text">Welcome to the International Airport Portal.</h3>
+                <h4 class="intro-text">Please select one of the airports for more details.</h4>    
+            </div>
+
+
         </div>
+
     </div>
+    
+    <!-- <footer>
+        &copy;2022 by Abdalla
+    </footer> -->
         
 
     <script src="./assets/js/script.js"></script>
