--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script
+src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+</script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Aiport Network</title>
 </head>
@@ -37,8 +40,14 @@
 
         <div class="airport-data">
             <div class="intro-text-div">
-                <h3 class="intro-text">Welcome to the International Airport Portal.</h3>
-                <h4 class="intro-text">Please select one of the airports for more details.</h4>    
+                <div class="title-elements">
+                    <h3 class="intro-text">Welcome to the International Airport Portal.</h3>
+                    <h4 class="intro-text">Please select one of the airports for more details.</h4>
+                </div>
+                 
+                <div class="charts-area">
+
+                </div>
             </div>
 
 
